<?xml version="1.0"?>
<package format="2">
  <name>waypoint_server</name>
  <version>0.9.0</version>

  <description>
    The Waypoint Server package.
  </description>

  <maintainer email="sarathkrishnan99@gmail.com">Sarathkrishnan Ramesh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
